# mlTerm

./: Cargo.toml  build.rs
assets/icons/: icon.icns
assets/themes/: dark.toml
config/: sessions.json
src/: app.rs  lib.rs  main.rs  menus.rs  tabbar.rs
src/actions/: mod.rs
src/actor/: command_actor.rs  messages.rs  mod.rs  process_actor.rs  session_actor.rs  ssh_actor.rs
src/app/: application.rs  event_bus.rs  logger.rs  mod.rs  settings.rs
src/components/: splitter.rs
src/events/: mod.rs
src/models/: layout_model.rs  mod.rs  session_config.rs
src/platform/: mod.rs
src/protocol/: connection.rs  mod.rs
src/protocol/ssh/: client.rs  mod.rs
src/state/: app_state.rs  config_manager.rs  mod.rs  session_manager.rs  terminal_manager.rs
src/terminal/: mod.rs  session.rs  session_manager.rs
src/ui/: mod.rs
src/ui/components/: splitter.rs
src/ui/dialogs/: mod.rs
src/ui/terminal/: mod.rs  terminal_view.rs
src/ui/window/: index.rs  main_window.rs  mod.rs  side_bar.rs  status_bar.rs  terminal_area.rs  title_bar.rs
src/workspace/: mod.rs
